Update CLDR to 44